tests/fixtures/invalid/str_ge_bool.py
# Cannot compare with >= Str and Bool
x: bool = "hello" >= True
